--- a/srs/static/css/srs.css
+++ b/srs/static/css/srs.css
@@ -717,6 +717,12 @@ ul img {
     background-color: #27ae60;
 }
 
+.export {
+    font: normal 140% Arial, Helvetica, sans-serif;
+    text-shadow: 0px -1px 0px #000;
+    background: transparent;
+}
+
 .btn.cancel {
     color: white;
     background-color: #e74c3c;
@@ -751,6 +757,24 @@ ul img {
 
 .btn.signup:hover {
     background-color: #0070cf;
+}
+
+.btn.export {
+    padding: 5px 0 0 10px;
+    font: normal 140% Arial, Helvetica, sans-serif;
+    height: 30px;
+    text-shadow: 0px -1px 0px #000;
+    color: #fff;
+    background: #0043A8;
+    background: -moz-linear-gradient(#43A9FF, #0043A8);
+    background: -o-linear-gradient(#43A9FF, #0043A8);
+    background: -webkit-linear-gradient(#43A9FF, #0043A8);
+    border-radius: 15px 15px 15px 15px;
+    -moz-border-radius: 15px 15px 15px 15px;
+    -webkit-border: 15px 15px 15px 15px;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 5px;
+    -moz-box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 5px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 5px;
 }
 
 input {
