--- a/srs/templates/srs/notecard_list.html
+++ b/srs/templates/srs/notecard_list.html
@@ -64,7 +64,7 @@
     <a onclick="clickSelectedNotecard()"><h2>Select</h2></a>
     <a href="{% url 'import_notecard' pk=pk %}"><h2>Import</h2></a>
     <form action="{% url 'export_notecard' pk=pk %}" method='GET'>
-        <button type="submit" class="save btn btn-default">Export</button>
+        <h2><button type="submit" class="export">Export</button></h2>
     </form>
     <!--<a href="{% url 'export_notecard' pk=pk %}"><h2>Export</h2></a> -->
     <a onclick="showSelectedNotecardLabel()"><h2>Label</h2></a>
