--- a/srs/templates/srs/notecard_list.html
+++ b/srs/templates/srs/notecard_list.html
@@ -63,10 +63,11 @@
     <a onclick="deactivate()"><h2>Delete</h2></a>
     <a onclick="clickSelectedNotecard()"><h2>Select</h2></a>
     <a href="{% url 'import_notecard' pk=pk %}"><h2>Import</h2></a>
-    <form action="{% url 'export_notecard' pk=pk %}" method='GET'>
-        <h2><button type="submit" class="export">Export</button></h2>
+    <form id="export_form" action="{% url 'export_notecard' pk=pk %}" method='GET'>
+        <a onclick="document.getElementById('export_form').submit()">
+            <h2>Export</h2>
+        </a>
     </form>
-    <!--<a href="{% url 'export_notecard' pk=pk %}"><h2>Export</h2></a> -->
     <a onclick="showSelectedNotecardLabel()"><h2>Label</h2></a>
     <a href="{% url 'notefile_detail' pk=pk %}"><h2>Back</h2></a>
 {% endblock %}
