--- a/srs/templates/srs/import_notecard.html
+++ b/srs/templates/srs/import_notecard.html
@@ -1,8 +1,8 @@
 {% extends 'srs/base.html' %}
 
 {% block content %}
-    <p>Please enter the name of the file to import from.</p>
-    <form action="{% url 'import_notecard' pk=pk %}" method="POST">{% csrf_token %}
+    <p>Please choose a file to import from.</p>
+    <form enctype="multipart/form-data" action="{% url 'import_notecard' pk=pk %}" method="POST">{% csrf_token %}
     	{{form.as_p}}
         <button type="submit" class="save btn btn-default">Save</button>
         <a href="{% url 'notecard_list' pk=pk %}" class="cancel btn btn-default">Cancel</a>
